--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "name": "ycard-app",
+  "author": "Juri Strumpflohner",
+  "homepage": "https://yoseikancard.firebaseapp.com/",
   "private": true,
   "scripts": {
+    "start": "ionic serve",
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
+    "build": "ionic-app-scripts build --prod",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
